[package]
name = "data-node"
version = "0.1.0"
authors = ["Timo <5381765+timokae@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4"
local-ip = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
